@@ -317,7 +317,7 @@ choice
 #	config FREETZ_TYPE_SINUS_W500V_7150
 #		bool "Sinus W500V"
 #		depends on FREETZ_TYPE_FON_7150
-#		select FREETZ_MODULE_jffs2
+#		select FREETZ_MODULE_jffs2 if ! FREETZ_REMOVE_JFFS2
 #		help
 #			Enable this to compile a mod image for T-Com Sinus W500V based
 #			on a 7150 image.
@@ -625,7 +625,9 @@ config FREETZ_REPLACE_KERNEL
 					FREETZ_AVM_VERSION_7390_04_90 || \
 					FREETZ_AVM_VERSION_7390_05_05 \
 					)
-	select FREETZ_MODULE_jffs2 if FREETZ_AVM_VERSION_7320_04_86  || FREETZ_AVM_VERSION_7330_05_06
+	select FREETZ_MODULE_jffs2 if \
+		! FREETZ_REMOVE_JFFS2 && \
+		(FREETZ_AVM_VERSION_7320_04_86  || FREETZ_AVM_VERSION_7330_05_06)
 	select FREETZ_MODULE_msdos if FREETZ_AVM_VERSION_7270_05_05
 	select FREETZ_MODULE_usbcore if \
 		FREETZ_KERNEL_LAYOUT_UR8 && FREETZ_AVM_VERSION_7270_04_86
