@@ -36,6 +36,8 @@ Latest changes:
     * remove showdsldstat: Removes the showdsldstat utility which shows you the cpmac mode,
       connect time, external ip (has not to be the public ip!), route and dns servers.
       Also the state of IPv6, voip and tr069.
+    * remove jffs2.ko: remove JFFS2 kernel module, saving 144-192 kB of
+      uncompressed firmware space
 
 - New packages, libs, modules:
     * avahi 0.6.30
